finished social links and fixed spacing between gallery images using gridgap

--- a/frontend/src/components/Home/Home.module.css
+++ b/frontend/src/components/Home/Home.module.css
@@ -1,27 +1,30 @@
 .homecontainer {
   height: 1024px;
-  width: 1440px;
+  width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   /* background-color: black; */
 }
 
 .gallerycontainer {
   /* background-color: yellow; */
-  height: 1024px;
-  width: 1000px;
+  height: 750px;
+  width: 750px;
   display: grid;
   justify-content: center;
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  /* gap: 5px 5px; */
 }
 
 .galleryone {
   justify-self: center;
-  grid-row: 1/2;
-  grid-column: 1/2;
+  /* grid-row: 1/2;
+  grid-column: 1/2; */
   background-image: url('./images/customcakes.jpg');
   background-size: cover;
   height: 250px;
@@ -30,8 +33,8 @@
 
 .gallerytwo {
   justify-self: center;
-  grid-row: 1/2;
-  grid-column: 2/3;
+  /* grid-row: 1/2;
+  grid-column: 2/3; */
   background-image: url('./images/standardcakes.jpg');
   background-size: cover;
   height: 250px;
@@ -40,8 +43,8 @@
 
 .gallerythree {
   justify-self: center;
-  grid-row: 1/2;
-  grid-column: 3/4;
+  /* grid-row: 1/2;
+  grid-column: 3/4; */
   background-image: url('./images/weddingcakes4.jpg');
   background-size: cover;
   height: 250px;
@@ -50,8 +53,8 @@
 
 .galleryfour {
   justify-self: center;
-  grid-row: 2/3;
-  grid-column: 1/2;
+  /* grid-row: 2/3;
+  grid-column: 1/2; */
   background-image: url('./images/ubecakes2.jpg');
   background-size: cover;
   height: 250px;
@@ -60,8 +63,8 @@
 
 .galleryfive {
   justify-self: center;
-  grid-row: 2/3;
-  grid-column: 2/3;
+  /* grid-row: 2/3;
+  grid-column: 2/3; */
   background-image: url('./images/filipinocuisine1.jpg');
   background-size: cover;
   height: 250px;
@@ -70,8 +73,8 @@
 
 .gallerysix {
   justify-self: center;
-  grid-row: 2/3;
-  grid-column: 3/4;
+  /* grid-row: 2/3;
+  grid-column: 3/4; */
   background-image: url('./images/cupcakes4.jpg');
   background-size: cover;
   height: 250px;
@@ -80,8 +83,8 @@
 
 .galleryseven {
   justify-self: center;
-  grid-row: 3/4;
-  grid-column: 1/2;
+  /* grid-row: 3/4;
+  grid-column: 1/2; */
   background-image: url('./images/macarons.jpg');
   background-size: cover;
   height: 250px;
@@ -90,8 +93,8 @@
 
 .galleryeight {
   justify-self: center;
-  grid-row: 3/4;
-  grid-column: 2/3;
+  /* grid-row: 3/4;
+  grid-column: 2/3; */
   background-image: url('./images/pandesal.jpg');
   background-size: cover;
   height: 250px;
@@ -100,8 +103,8 @@
 
 .gallerynine {
   justify-self: center;
-  grid-row: 3/4;
-  grid-column: 3/4;
+  /* grid-row: 3/4;
+  grid-column: 3/4; */
   background-image: url('./images/halohalo.jpg');
   background-size: cover;
   height: 250px;
