--- a/frontend/src/components/Social/Social.module.css
+++ b/frontend/src/components/Social/Social.module.css
@@ -1,3 +1,83 @@
-.phone {
+.social {
+  position: fixed;
+  top: 10%;
+  right: 0%;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+}
+
+.social ul {
+  list-style-type: none;
+  padding: 0;
+  transform: translateX(0px);
+}
+
+.social ul li {
+  display: block;
+  margin: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 300px;
+  text-align: left;
+  padding: 10px;
+  border-radius: 50px 0 0 50px;
+  transform: translate(160px);
+  transition: all 1s;
+}
+
+.social ul li:hover {
+  transform: translate(0px);
+}
+
+.social ul li.phone:hover {
+  background-color: #55acee;
+}
+
+.social ul li.facebook:hover {
+  background-color: #3d5999;
+}
+
+.social ul li.instagram:hover {
+  background-color: #e4405f;
+}
+
+.social ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+.icon {
+  text-align: center;
+  margin-right: 14px;
   color: black;
+  background-color: white;
+  padding: 5px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  transform: rotate(0deg);
+}
+
+.iconinsta {
+  text-align: center;
+  margin-right: 14px;
+  color: black;
+  background-color: white;
+  padding: 5px;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 23px;
+  transform: rotate(0deg);
+}
+
+.icon:hover {
+  transform: rotate(360deg);
+  transition: all 1s;
+}
+
+.iconinsta:hover {
+  transform: rotate(360deg);
+  transition: all 1s;
 }
